--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p>نظام يستخدم المبرد كوسيط للتبريد والتدفئة. يتم تكييف المبرد بوحدة تكثيف مفردة أو متعددة (والتي قد
                   تكون داخلية أو خارجية، مبردة بالماء أو الهواء)، ويتم تعميمها داخل المبنى إلى وحدات داخلية متعددة.</p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://ar.wikihow.com/%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D9%85%D9%83%D9%8A%D9%81-%D9%87%D9%88%D8%A7%D8%A1-%D9%85%D9%86%D9%81%D8%B5%D9%84" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
           <div class="spaes col-md-6 col-lg-4 mb-4 text-center">
@@ -125,7 +125,7 @@
                   كفاءة وسلامة المكيف حتي لا تتدهور حالة الجهاز التشغيلية. مراجعة وتسجيل درجة حرارة الغرفة. تنظيف فلاتر
                   الهواء وتغيرها. تنظيف المكثف.</p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://mawdoo3.com/%D8%A3%D8%B9%D8%B7%D8%A7%D9%84_%D8%A7%D9%84%D8%AA%D9%83%D9%8A%D9%8A%D9%81_%D9%88%D8%B7%D8%B1%D9%82_%D8%A5%D8%B5%D9%84%D8%A7%D8%AD%D9%87%D8%A7" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
           <div class="spaes col-md-6 col-lg-4 mb-4 text-center">
@@ -138,7 +138,7 @@
                 <p>قد تحدث تسربات للفريون أو قد يقل نسبته في الجهاز مما يؤثر على أداء التكييف. لذلك، يصبح شحن الفريون
                   ضروريًا للحفاظ على كفاءة التكييف وضمان عمر أطول للجهاز</p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://huamirtech.com/air-conditioning-freon-charge/#google_vignette" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
           <div class="spaes col-md-6 col-lg-4 mb-4 text-center">
@@ -152,7 +152,7 @@
                   الضروري تنظيف الوحدة الداخلية والمرشحات والمبادل الخارجي بانتظام، للحفاظ على مكيف الهواء في حالة
                   مثالية والحفاظ على نقاء هواء منزلك.</p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://ar.wikihow.com/%D8%AA%D9%86%D8%B8%D9%8A%D9%81-%D9%85%D9%83%D9%8A%D9%81%D8%A7%D8%AA-%D8%B3%D8%A8%D9%84%D9%8A%D8%AA" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
           <div class="spaes col-md-6 col-lg-4 mb-4 text-center">
@@ -166,7 +166,7 @@
                 <p>نقل مكيف السبلت من مكان إلي اخر بدون حدوث تلفيات للمكيف، أو أى أضرار تحدث أثناء تحريك المكيف من مكانه
                   فعادة ما يحدث احتباسات لغاز المكيف أثناء نقله من مكان الى اخر، </p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://www.elr7ab.com/%D8%B7%D8%B1%D9%82-%D9%81%D9%83-%D9%88%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A7%D9%84%D9%85%D9%83%D9%8A%D9%81%D8%A7%D8%AA/" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
           <div class="spaes col-md-6 col-lg-4 mb-4 text-center">
@@ -180,7 +180,7 @@
                   مما يسمح بالتدفق الحر لسائل التبريد بينهما، تمتاز بأنها متينة للغاية ومقاومة للتآكل ، مما يجعلها
                   خيارًا مثاليًا للاستخدام على المدى الطويل </p>
               </div>
-              <button type="button" class="btn btn-outline-success my-3">عرض المزيد</button>
+              <a href="https://youtu.be/YOUay-1ohLc?t=14" target="_blank"><button type="button" class="btn btn-outline-success my-3">عرض المزيد</button></a>
             </div>
           </div>
         </div>
